<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APS_Meu_Dinheiro_Cliente</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_receita">ReceitaActivity</string>
    <string name="title_activity_registrar_receita">RegistrarReceitaActivity</string>
    <string name="title_activity_visualizar_receita_futura">VisualizarReceitaFuturaActivity</string>
    <string name="title_activity_visualizar_receita">VisualizarReceitaActivity</string>
    <string name="title_activity_atualizar_receita">AtualizarReceitaActivity</string>
    <string name="title_activity_despesa">DespesaActivity</string>
    <string name="title_activity_registrar_despesa">RegistrarDespesaActivity</string>
    <string name="title_activity_visualizar_despesa">VisualizarDespesaActivity</string>
    <string name="title_activity_visualizar_despesa_futura">VisualizarDespesaFuturaActivity</string>
    <string name="title_activity_atualizar_despesa">AtualizarDespesaActivity</string>
    <string name="title_activity_saldo">SaldoActivity</string>
    <string name="lbl_btnDespesa">Despesa</string>
    <string name="lbl_btnReceita">Receita</string>
    <string name="lbl_btnSaldo">Meu Saldo</string>
    <string name="lbl_btnSairMainActivity">Sair</string>
    <string name="lbl_btnSairDespesaActivity">Sair</string>
    <string name="lbl_btnRegistrarDespesa">Registrar/Pagar Despesa</string>
    <string name="lbl_btnVizualizarDespesaRegistrada">Visualizar Despesas Futuras</string>
    <string name="lbl_btnVisualizarDespesasPagas">Visualizar Despesas Pagas</string>
    <string name="lbl_textViewRegistrarDescricaoDespesa">Descricao da Despesa</string>
    <string name="lbl_textViewRegistrarValorDespesa">Valor da Despesa</string>
    <string name="lbl_textViewRegistrarDataPagamentoDespesa">Data de Pagamento</string>
    <string name="lbl_editTextRegistrarDescricaoDespesa">Descricao</string>
    <string name="lbl_editTextRegistrarValorDespesa">Valor</string>
    <string name="lbl_editTextRegistrarDataPagamentoDespesa">Data</string>
    <string name="lbl_btnRegistrarDespesaFutura">Registrar Despesa Futura</string>
    <string name="lbl_btnPagarDespesa">Pagar Despesa</string>
    <string name="lbl_btnSairRegistrarPagarDespesaActivity">Sair</string>
    <string name="lbl_textViewEditarDescricaoDespesa">Descricao da Despesa</string>
    <string name="lbl_textViewEditarValorDespesa">Valor da Despesa</string>
    <string name="lbl_textViewEditarDataPagamentoDespesa">Data de Pagamento</string>
    <string name="lbl_editTextEditarDescricaoDespesa"></string>
    <string name="lbl_editTextEditarValorDespesa"></string>
    <string name="lbl_editTextEditarDataPagamentoDespesa"></string>
    <string name="lbl_btnEditarDespesa">Editar Despesa</string>
    <string name="lbl_btnSairEditarDespesaActivity">Sair</string>
    <string name="lbl_btnSairVisualizarDespesaFuturaActivity">Sair</string>
    <string name="lbl_btnSairVisualizarDespesaActivity">Sair</string>
    <string name="lbl_btnSairVisualizarReceitaActivity">Sair</string>
    <string name="lbl_btnSairVisualizarReceitaFuturaActivity">Sair</string>
    <string name="lbl_btnSairReceitaActivity">Sair</string>
    <string name="lbl_btnRegistrarReceberReceitaActivity">Registar/Receber Receita</string>
    <string name="lbl_btnVisualizarReceitaFuturaActivity">Visualizar Receitas Futuras</string>
    <string name="lbl_btnVisualizarReceitaRecebidaActivity">Visualizar Receitas Recebidas</string>
    <string name="lbl_textViewRegistrarDescricaoReceita">Descricao da Receita</string>
    <string name="lbl_textViewRegistrarValorReceita">Valor da Receita</string>
    <string name="lbl_textViewRegistrarDataRecebimentoReceita">Data de Recebimento</string>
    <string name="lbl_btnRegistrarReceitaFutura">Registar Receita Futura</string>
    <string name="lbl_btnReceberReceita">Receber Receita</string>
    <string name="lbl_btnSairRegistrarReceberReceitaActivity">Sair</string>
    <string name="lbl_editTextRegistrarDescricaoReceita">Descricao</string>
    <string name="lbl_editTextRegistrarValorReceita">Valor da Receita</string>
    <string name="lbl_editTextRegistrarDataRecebimentoReceita">Data</string>
    <string name="lbl_textViewEditarDescricaoReceita">Descricao da Receita</string>
    <string name="lbl_textViewEditarValorReceita">Valor da Receita</string>
    <string name="lbl_textViewEditarDataRecebimentoReceita">Data de Recebimento</string>
    <string name="lbl_btnEditarReceita">Editar Receita</string>
    <string name="lbl_btnSairEditarReceitaActivity">Sair</string>
    <string name="lbl_editTextEditarDescricaoReceita"></string>
    <string name="lbl_editTextEditarValorReceita"></string>
    <string name="lbl_editTextEditarDataRecebimentoReceita"></string>
    <string name="itemAtualizarDespesa">Editar Despesa</string>
    <string name="itemExcluirDespesa">Excluir Despesa</string>
    <string name="itemDespesaFutura">Despesa Futura</string>
    <string name="itemAtualizarDespesaFutura">Editar Despesa Futura</string>
    <string name="itemExcluirDespesaFutura">Excluir Despesa Futura</string>
    <string name="itemPagarDespesaFutura">Pagar Despesa Futura</string>
    <string name="itemAtualizarReceita">Editar Receita</string>
    <string name="itemExcluirReceita">Excluir Receita</string>
    <string name="itemReceitaFutura">Receita Futura</string>
    <string name="itemAtualizarReceitaFutura">Editar Receita Futura</string>
    <string name="itemExcluirReceitaFutura">Excluir Receita Futura</string>
    <string name="itemReceberReceitaFutura">Receber Receita Futura</string>
    <string name="lbl_btnSairActivitySaldo">Sair</string>
    <string name="lbl_textViewDespesaFutura">Despesas a pagar:</string>
    <string name="lbl_textViewSaldoDespesa">Despesa</string>
    <string name="lbl_textViewDespesaPagas">Despesas pagas:</string>
    <string name="lbl_textViewSaldoReceita">Receita</string>
    <string name="lbl_textViewReceitaFutura">Receitas a receber:</string>
    <string name="lbl_textViewReceitaRecebida">Receitas recebidas:</string>
    <string name="lbl_textViewSaldoAtual">Saldo Atual</string>
    <string name="lbl_textViewValorReceitaFutura"></string>
    <string name="lbl_textViewValorReceitaRecebida"></string>
    <string name="lbl_textViewValorDespesaFutura"></string>
    <string name="lbl_textViewValorDespesaPaga"></string>
    <string name="lbl_textViewValorSaldoAtual"></string>
    <string name="lbl_textViewSaldoTotal">Saldo Total</string>
    <string name="lbl_textViewValorSaldoTotal"></string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="lbl_btnEntrarMenuActivity">Entrar</string>
    <string name="lbl_btnCancelarActivityLogin">Cancelar</string>
    <string name="lbl_editTextSenha">Senha</string>
    <string name="lbl_editTextLogin">Login</string>
    <string name="lbl_textViewLoginMeuDinheiro">Meu Dinheiro</string>
    <string name="lbl_btnCadastrarUsuarioActivity">Cadastrar Usuario</string>
    <string name="title_activity_cadastrar_usuario">CadastrarUsuarioActivity</string>
    <string name="lbl_textViewCadastroDeUsuario">Cadastro de Usuario</string>
    <string name="lbl_textViewCadastroLogin">Login</string>
    <string name="lbl_textViewCadastroSenha">Senha</string>
    <string name="lbl_editTextCadastroLogin">Login</string>
    <string name="lbl_editTextCadastroSenha">Senha</string>
    <string name="lbl_btnCadastrar">Cadastrar Usuario</string>
    <string name="lbl_btnSairCadastroUsuarioActivity">Sair</string>
    <string name="item_editarUsuario">Editar Usuario</string>
    <string name="item_ExcluirUsuario">Excluir Usuario</string>
    <string name="title_activity_editar_usuario">EditarUsuarioActivity</string>
    <string name="lbl_textViewEditarUsuarioActivity">Editar Usuario</string>
    <string name="lbl_textViewEditarLogin">Login</string>
    <string name="lbl_textViewEditarSenha">Senha</string>
    <string name="lbl_btnEditarUsuario">Editar Usuario</string>
    <string name="lbl_btnSairEditarUsuarioActivity">Sair</string>
    <string name="lbl_editTextEditarLogin"></string>
    <string name="lbl_editTextEditarSenha"></string>
    <string name="itemSairMenu">Sair</string>

</resources>
