<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aps_meu_dinheiro_cliente.SaldoActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_btnSairActivitySaldo" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_textViewSaldoReceita"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewReceitaRecebida"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/receita_recebida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewValorReceitaRecebida" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewReceitaFutura"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/receita_futura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewValorReceitaFutura" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_textViewSaldoDespesa"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewDespesaPagas"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/despesa_paga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewValorDespesaPaga" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewDespesaFutura"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/despesa_futura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_textViewValorDespesaFutura" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_textViewSaldoAtual"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/saldo_atual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_textViewValorSaldoAtual"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_textViewSaldoTotal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/saldo_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_textViewValorSaldoTotal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>