<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/button1"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_x="35dp"
        android:layout_y="265dp"
        android:text="@string/lbl_btnEntrarMenuActivity" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="158dp"
        android:ems="10"
        android:hint="@string/lbl_editTextLogin" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="1dp"
        android:layout_y="214dp"
        android:ems="10"
        android:hint="@string/lbl_editTextSenha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="184dp"
        android:layout_y="265dp"
        android:text="@string/lbl_btnCancelarActivityLogin" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="89dp"
        android:layout_y="106dp"
        android:text="@string/lbl_textViewLoginMeuDinheiro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="456dp"
        android:text="@string/lbl_btnCadastrarUsuarioActivity" />

</AbsoluteLayout>
